# cookiecutter-python-containerapp

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  Dockerfile  README.md  azure-pipelines.yml  pyproject.toml  requirements-dev.txt
{{cookiecutter.project_slug}}/tests/: test_main.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: main.py
